--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "questions-client",
-  "version": "1.0.0",
-  "description": "client side of questions proj",
-  "main": "app.js",
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/andhop/questions-client.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "keywords": [
-    "questions",
-    "support",
-    "suggestions"
-  ],
-  "author": "Andy Hopwood",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/andhop/questions-client/issues"
-  },
-  "homepage": "https://github.com/andhop/questions-client#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
